# snappy

./: .gitignore  CMakeLists.txt  requirements.txt  snappy_compress_fuzzer.cc  snappy_uncompress_fuzzer.cc
cmake/: carbin_module.cmake  carbin_package.cmake  project_profile.cmake
snappy/: CMakeLists.txt  config.h.in  snappy-c.cc  snappy-internal.h  snappy-sinksource.cc  snappy-stubs-internal.cc  snappy-stubs-internal.h  snappy-stubs-public.h  snappy.cc  snappy.h
test/: CMakeLists.txt  snappy-test.cc  snappy-test.h  snappy_unittest.cc
